crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__ca-hurried-sudden-hardening.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Text",
            "speaker_code": "TXT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "change_me_later",
        "language": "eng",
        "role": "Text",
        "speaker": "TXT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": {
                    "element_type": "hurried_start",
                    "span": {
                      "end": 103,
                      "start": 100
                    }
                  },
                  "type": "ca_element"
                },
                {
                  "content": "quick",
                  "type": "text"
                }
              ],
              "raw_text": "⤇quick",
              "span": {
                "end": 108,
                "start": 100
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "start",
                  "type": "text"
                }
              ],
              "raw_text": "start",
              "span": {
                "end": 114,
                "start": 109
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "and",
                  "type": "text"
                }
              ],
              "raw_text": "and",
              "span": {
                "end": 118,
                "start": 115
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "then",
                  "type": "text"
                }
              ],
              "raw_text": "then",
              "span": {
                "end": 123,
                "start": 119
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 125,
                "start": 124
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "sudden",
                  "type": "text"
                }
              ],
              "raw_text": "sudden",
              "span": {
                "end": 132,
                "start": 126
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "cutoff",
                  "type": "text"
                },
                {
                  "content": {
                    "element_type": "sudden_stop",
                    "span": {
                      "end": 142,
                      "start": 139
                    }
                  },
                  "type": "ca_element"
                }
              ],
              "raw_text": "cutoff⤆",
              "span": {
                "end": 142,
                "start": 133
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "TXT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "also",
                  "type": "text"
                }
              ],
              "raw_text": "also",
              "span": {
                "end": 155,
                "start": 151
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "hard",
                  "type": "text"
                },
                {
                  "content": {
                    "element_type": "hardening",
                    "span": {
                      "end": 163,
                      "start": 160
                    }
                  },
                  "type": "ca_element"
                },
                {
                  "content": "ening",
                  "type": "text"
                }
              ],
              "raw_text": "hard⁑ening",
              "span": {
                "end": 168,
                "start": 156
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "inside",
                  "type": "text"
                }
              ],
              "raw_text": "inside",
              "span": {
                "end": 175,
                "start": 169
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 177,
                "start": 176
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "word",
                  "type": "text"
                }
              ],
              "raw_text": "word",
              "span": {
                "end": 182,
                "start": 178
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "TXT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "TXT": {
      "birth_date": null,
      "code": "TXT",
      "id": {
        "corpus": "change_me_later",
        "language": "eng",
        "role": "Text",
        "speaker": "TXT"
      },
      "name": null,
      "role": "Text"
    }
  }
}
