crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__ca-overlap-complex.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": null,
            "role": "Father",
            "speaker_code": "FAT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "options": [
          "CA"
        ],
        "type": "options"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Father",
        "speaker": "FAT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Complex overlap markers: indexed overlaps, multiple overlap pairs,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "three-speaker overlaps",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: overlap_point, indexed overlaps, multi-speaker overlap",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "want",
              "content": [
                {
                  "content": "want",
                  "type": "text"
                }
              ],
              "raw_text": "want",
              "type": "word"
            },
            {
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "cookie",
              "content": [
                {
                  "content": "cookie",
                  "type": "text"
                }
              ],
              "raw_text": "cookie",
              "type": "word"
            },
            {
              "marker": "top_overlap_end",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "please",
              "content": [
                {
                  "content": "please",
                  "type": "text"
                }
              ],
              "raw_text": "please",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "no",
              "content": [
                {
                  "content": "no",
                  "type": "text"
                }
              ],
              "raw_text": "no",
              "type": "word"
            },
            {
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "you",
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "type": "word"
            },
            {
              "cleaned_text": "cannot",
              "content": [
                {
                  "content": "cannot",
                  "type": "text"
                }
              ],
              "raw_text": "cannot",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "but",
              "content": [
                {
                  "content": "but",
                  "type": "text"
                }
              ],
              "raw_text": "but",
              "type": "word"
            },
            {
              "index": 2,
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "index": 2,
              "marker": "top_overlap_end",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "really",
              "content": [
                {
                  "content": "really",
                  "type": "text"
                }
              ],
              "raw_text": "really",
              "type": "word"
            },
            {
              "cleaned_text": "want",
              "content": [
                {
                  "content": "want",
                  "type": "text"
                }
              ],
              "raw_text": "want",
              "type": "word"
            },
            {
              "cleaned_text": "one",
              "content": [
                {
                  "content": "one",
                  "type": "text"
                }
              ],
              "raw_text": "one",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "index": 2,
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "no",
              "content": [
                {
                  "content": "no",
                  "type": "text"
                }
              ],
              "raw_text": "no",
              "type": "word"
            },
            {
              "index": 2,
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "let",
              "content": [
                {
                  "content": "let",
                  "type": "text"
                }
              ],
              "raw_text": "let",
              "type": "word"
            },
            {
              "cleaned_text": "him",
              "content": [
                {
                  "content": "him",
                  "type": "text"
                }
              ],
              "raw_text": "him",
              "type": "word"
            },
            {
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "have",
              "content": [
                {
                  "content": "have",
                  "type": "text"
                }
              ],
              "raw_text": "have",
              "type": "word"
            },
            {
              "marker": "top_overlap_end",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "just",
              "content": [
                {
                  "content": "just",
                  "type": "text"
                }
              ],
              "raw_text": "just",
              "type": "word"
            },
            {
              "cleaned_text": "one",
              "content": [
                {
                  "content": "one",
                  "type": "text"
                }
              ],
              "raw_text": "one",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "FAT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "no",
              "content": [
                {
                  "content": "no",
                  "type": "text"
                }
              ],
              "raw_text": "no",
              "type": "word"
            },
            {
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "way",
              "content": [
                {
                  "content": "way",
                  "type": "text"
                }
              ],
              "raw_text": "way",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "please",
              "content": [
                {
                  "content": "plea",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 579,
                      "start": 578
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": "se",
                  "type": "text"
                }
              ],
              "raw_text": "plea:se",
              "type": "word"
            },
            {
              "marker": "top_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "no",
              "content": [
                {
                  "content": "no",
                  "type": "text"
                }
              ],
              "raw_text": "no",
              "type": "word"
            },
            {
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "come",
              "content": [
                {
                  "content": "come",
                  "type": "text"
                }
              ],
              "raw_text": "come",
              "type": "word"
            },
            {
              "marker": "top_overlap_end",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "on",
              "content": [
                {
                  "content": "on",
                  "type": "text"
                }
              ],
              "raw_text": "on",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "FAT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "fine",
              "content": [
                {
                  "content": "fine",
                  "type": "text"
                }
              ],
              "raw_text": "fine",
              "type": "word"
            },
            {
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [
    "CA"
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "FAT": {
      "birth_date": null,
      "code": "FAT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Father",
        "speaker": "FAT"
      },
      "name": null,
      "role": "Father"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
