crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__ca-parens.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "options": [
          "CA"
        ],
        "type": "options"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "change_me_later",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "CA",
                  "type": "text"
                }
              ],
              "raw_text": "CA",
              "span": {
                "end": 131,
                "start": 129
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "uses",
                  "type": "text"
                }
              ],
              "raw_text": "uses",
              "span": {
                "end": 136,
                "start": 132
              },
              "type": "word"
            },
            {
              "category": "ca_omission",
              "content": [
                {
                  "content": "parens",
                  "type": "text"
                }
              ],
              "raw_text": "(parens)",
              "span": {
                "end": 145,
                "start": 137
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "for",
                  "type": "text"
                }
              ],
              "raw_text": "for",
              "span": {
                "end": 149,
                "start": 146
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "words",
                  "type": "text"
                }
              ],
              "raw_text": "words",
              "span": {
                "end": 155,
                "start": 150
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "whose",
                  "type": "text"
                }
              ],
              "raw_text": "whose",
              "span": {
                "end": 161,
                "start": 156
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "transcription",
                  "type": "text"
                }
              ],
              "raw_text": "transcription",
              "span": {
                "end": 175,
                "start": 162
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 178,
                "start": 176
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "uncertain",
                  "type": "text"
                }
              ],
              "raw_text": "uncertain",
              "span": {
                "end": 188,
                "start": 179
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "corpus": "change_me_later",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    }
  }
}
